--- a/Blackex-v1-2-Template/index.html
+++ b/Blackex-v1-2-Template/index.html
@@ -777,7 +777,7 @@
                     <div class="col-lg-12">
                         <!-- copyright start -->
                         <div class="copyright">
-                            <a class="link-underline-light" href="#">Blackex</a> &copy; 2018 All Rights Reserved.
+                            <a class="link-underline-light" href="#">Akshay M Photography</a> &copy; 2023 All Rights Reserved.
                         </div><!-- copyright end -->
                     </div><!-- col end -->
                 </div><!-- row end -->
