--- a/Blackex-v1-2-Template/index.html
+++ b/Blackex-v1-2-Template/index.html
@@ -90,7 +90,7 @@
                             Dark is<br/> <span>a<br/> secret of</span> Beauty
                         </h1>
                         <h2 class="home-page-subtitle">
-                            Unknown
+                            unknown
                         </h2>
                     </div><!-- home page title end -->
                 </div><!-- center block end -->
@@ -211,7 +211,7 @@
                         <div class="section-txt">
                             <p>
                                 Contact us today to book your house party<br/><a class="link-underline-light"
-                                href="#">Book Now.</a>
+                                href="https://wa.me/971529612355?text=Hi">Book Now.</a>
                             </p>
                         </div><!-- section TXT end -->
                         <!-- divider start -->
@@ -223,7 +223,7 @@
                         <div class="section-txt">
                             <p>
                                 Contact us today to book your events <br/><a class="link-underline-light"
-                                href="#">Book Now.</a>
+                                href="tel:+971529612355">Book Now.</a>
                             </p>
                         </div><!-- section TXT end -->
                     </div><!-- col end -->
@@ -250,7 +250,7 @@
                                 <div class="col-xs-6 col-sm-3">
                                     <!-- fact 1 start -->
                                     <div class="facts-counter-number">
-                                        6
+                                        3
                                     </div>
                                     <div class="facts-counter-description facts-counter-description-primary">
                                         <!-- divider start -->
@@ -266,7 +266,7 @@
                                 <div class="col-xs-6 col-sm-3">
                                     <!-- fact 2 start -->
                                     <div class="facts-counter-number">
-                                        60
+                                        5
                                     </div>
                                     <div class="facts-counter-description facts-counter-description-primary">
                                         <!-- divider start -->
@@ -284,7 +284,7 @@
                                 <div class="col-xs-6 col-sm-3">
                                     <!-- fact 3 start -->
                                     <div class="facts-counter-number">
-                                        6940
+                                        690
                                     </div>
                                     <div class="facts-counter-description">
                                         <!-- divider start -->
@@ -300,7 +300,7 @@
                                 <div class="col-xs-6 col-sm-3">
                                     <!-- fact 4 start -->
                                     <div class="facts-counter-number">
-                                        360
+                                        1668
                                     </div>
                                     <div class="facts-counter-description">
                                         <!-- divider start -->
@@ -351,7 +351,7 @@
                         <div class="section-intro">
                             <p>
                                 Expert in capturing best moments with solid understanding of technical aspects. <a class="link-underline-light"
-                                href="/works">ever since the 2016.</a>
+                                href="/works">ever since the 2020.</a>
                             </p>
                         </div><!-- section TXT end -->
                         <!-- divider start -->
@@ -510,18 +510,18 @@
                     <div class="item-grid-size">
                         <!-- works item IMG start -->
                         <div class="works-img-all works-img-1"></div><a class="link-wrap popup-photo" href="img/works/works-large/works-img-1.jpg" title=
-                        "Lorem ipsum dolor sit amet."><span></span><span></span></a><!-- works item IMG end -->
+                        "a photography from Taikudam stage perfomance."><span></span><span></span></a><!-- works item IMG end -->
                          <!-- works item description start -->
                         <div class="description">
                             <!-- title start -->
                             <h3>
-                                Web
+                                Events/Stage shows
                             </h3><!-- title end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
                             <!-- subtitle start -->
                             <div class="description-second">
-                                A JPG Image
+                                Thaikudam bridge
                             </div><!-- subtitle end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
@@ -533,7 +533,7 @@
                     <div class="item-grid-size">
                         <!-- works item IMG start -->
                         <div class="works-img-all works-img-2"></div><a class="link-wrap popup-photo" href="img/works/works-large/works-img-2.jpg" title=
-                        "Lorem ipsum dolor sit amet."><span></span><span></span></a><!-- works item IMG end -->
+                        "Lorem ipsum dolor sit amet." ><span></span><span></span></a><!-- works item IMG end -->
                          <!-- works item description start -->
                         <div class="description">
                             <!-- title start -->
@@ -555,19 +555,19 @@
                 <div class="item-folio item item-wh">
                     <div class="item-grid-size">
                         <!-- works item IMG start -->
-                        <div class="works-img-all works-img-3"></div><a class="link-wrap" data-lity="" href="https://www.youtube.com/watch?v=3zXrWmkVjTM"><span></span><span></span></a> 
+                        <div class="works-img-all works-img-3"></div><a class="link-wrap" data-lity="" href="https://www.instagram.com/reel/Cjo6iOkp5sr/?utm_source=ig_web_copy_link"><span></span><span></span></a> 
                         <!-- works item IMG end -->
                          <!-- works item description start -->
                         <div class="description">
                             <!-- title start -->
                             <h3>
-                                Print
+                                Brainstorm kakochi
                             </h3><!-- title end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
                             <!-- subtitle start -->
                             <div class="description-second">
-                                A YouTube Video
+                                A Instagram Video
                             </div><!-- subtitle end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
@@ -584,7 +584,7 @@
                         <div class="description">
                             <!-- title start -->
                             <h3>
-                                Design
+                                Portraits
                             </h3><!-- title end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
@@ -670,18 +670,18 @@
                 <div class="item-folio item item-wh">
                     <div class="item-grid-size">
                         <!-- works item IMG start -->
-                        <div class="works-img-all works-img-8"></div><a class="link-wrap" data-lity="" href="https://vimeo.com/95515307"><span></span><span></span></a><!-- works item IMG end -->
+                        <div class="works-img-all works-img-8"></div><a class="link-wrap" data-lity="" href="https://www.instagram.com/reel/CmHfqv8umj_/?utm_source=ig_web_copy_link"><span></span><span></span></a><!-- works item IMG end -->
                          <!-- works item description start -->
                         <div class="description">
                             <!-- title start -->
                             <h3>
-                                Web
+                                instagram
                             </h3><!-- title end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
                             <!-- subtitle start -->
                             <div class="description-second">
-                                A Vimeo Video
+                                A Video From Insta
                             </div><!-- subtitle end -->
                             <!-- divider start -->
                             <div class="inner-divider-half inner-divider-half-works"></div><!-- divider end -->
@@ -717,14 +717,21 @@
                         <!-- section TXT start -->
                         <div class="section-txt-contact">
                             <p>
-                                1976 Ex Nihilo Drive, Los Angeles | CA 90012
+                                21 A Street - Al Rashidiya - Dubai - United Arab Emirates
+                            </p>
+                        </div><!-- section TXT end -->
+                        <!-- section TXT start -->
+                        <div class="section-txt">
+                            <p>
+                                <br><a class="link-underline-light"
+                                href="tel:+971529612355">PHONE</a>
                             </p>
                         </div><!-- section TXT end -->
                         <!-- divider start -->
                         <div class="inner-divider-half"></div><!-- divider end -->
                         <!-- section email start -->
                         <div class="post-email-title">
-                            <a class="link-underline-light" href="mailto:contact@domainname.com">contact@domainname.com</a>
+                            <a class="link-underline-light" href="https://wa.me/971529612355?text=Hi">contact me at whatsapp</a>
                         </div><!-- section email end -->
                         <!-- divider start -->
                         <div class="inner-divider"></div><!-- divider end -->
@@ -762,7 +769,7 @@
                                 <div>
                                     <!-- contact form submit button start -->
                                     <div class="contact-form-submit-wrapper">
-                                        <button class="the-button the-button-submit" id="submit" type="submit"><span>Submit</span></button>
+                                        <a class="the-button the-button-submit" id="submit" type="submit" href="mailto:umarsuhail112@gmail.com"><span>Submit</span></a>
                                     </div><!-- contact form submit button end -->
                                 </div>
                             </form>
